[gd_scene load_steps=4 format=3 uid="uid://vqwmc6txdxui"]

[ext_resource type="Script" uid="uid://duxg5if5uoof4" path="res://Scripts/Grid.gd" id="1_3h6cw"]
[ext_resource type="Texture2D" uid="uid://d3r72j0pfyt1" path="res://Sprites/GridCellBorder.png" id="2_o6ano"]
[ext_resource type="Texture2D" uid="uid://t3ffb8unegpu" path="res://Sprites/AccessorySquare.png" id="3_1qoqy"]

[node name="Grid" type="Node2D"]
script = ExtResource("1_3h6cw")
cell_sprite = ExtResource("2_o6ano")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2.3841858e-07)
scale = Vector2(0.29999998, 0.4)
texture = ExtResource("3_1qoqy")

[node name="TileContainer" type="Node2D" parent="."]

[node name="MonstersContainer" type="Node2D" parent="."]

[node name="RuneContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="fxContainer" type="Node2D" parent="."]
unique_name_in_owner = true
